version/0.12/_sources/api/solver/_autosummary/settings/injections_child.rst.txt
:orphan:

.. _injections_child:

injections_child
================

.. currentmodule:: ansys.fluent.core.solver.settings_231.injections_child

.. autoclass:: injections_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

================================================   ================================

Child                                                                       Summary

================================================   ================================
:ref:`particle_type <particle_type>`                         'particle_type' child.

:ref:`material <material>`                                        'material' child.

:ref:`reference_frame <reference_frame>`                   'reference_frame' child.

:ref:`number_of_streams <number_of_streams>`             'number_of_streams' child.

:ref:`injection_type <injection_type>`                      'injection_type' child.

:ref:`interaction <interaction_1>`                             'interaction' child.

:ref:`parcel_method <parcel_method>`                         'parcel_method' child.

:ref:`particle_reinjector <particle_reinjector>`       'particle_reinjector' child.

:ref:`physical_models <physical_models>`                   'physical_models' child.

:ref:`initial_props <initial_props>`                         'initial_props' child.

================================================   ================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`injections <injections>`       'injections' child.

==============================   =======================

