version/0.19/_sources/api/solver/_autosummary/settings/injections_child.rst.txt
:orphan:

.. _injections_child:

injections_child
================

.. autoclass:: ansys.fluent.core.solver.settings_241.injections_child.injections_child
    :show-inheritance:

.. rubric:: Attributes

================================================   ================================

Attribute                                                                   Summary

================================================   ================================
:ref:`particle_type <particle_type>`                         'particle_type' child.

:ref:`material <material>`                                        'material' child.

:ref:`reference_frame <reference_frame>`                   'reference_frame' child.

:ref:`number_of_streams <number_of_streams>`             'number_of_streams' child.

:ref:`injection_type <injection_type>`                      'injection_type' child.

:ref:`interaction <interaction_1>`                             'interaction' child.

:ref:`parcel_method <parcel_method>`                         'parcel_method' child.

:ref:`particle_reinjector <particle_reinjector>`       'particle_reinjector' child.

:ref:`physical_models <physical_models>`                   'physical_models' child.

:ref:`initial_values <initial_values>`                      'initial_values' child.

:ref:`name <name>`                                              Name of the object.

================================================   ================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`injections <injections>`       'injections' child.

==============================   =======================

